# wtfo-guru-web

./: .bumpversion.cfg  .linthtmlrc.yaml  .pre-commit-config.yaml  .safety-policy.yml  CHANGELOG-dev.md  CHANGELOG.md  Makefile  app.json  main.py  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg
.github/: dependabot.yml
.github/workflows/: test.yml
app/pages/: home.md  projects.md
attic/static/css/: mystyle.css  style3.css
attic/templates/: base.html
attic/templates/include/: sidebar.html  topnav.html
static/css/: mystyle.css  style3.css  wtf-web-site.css
templates/: base.html  page.html
templates/include/: footer.html  header.html  sidebar.html  topnav.html
tests/: test_main.py
