[tool.poetry]
name = "wtfo-guru-web"
version = "1.0.2-dev8"
description = "Simple static web project using fastapi."
authors = ["Quien Sabe <qs5579@mail.com>"]
license = "MIT"
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
fastapi = "^0.110"
uvicorn = "^0.29"
python-dotenv = "^1.0.1"
aiofiles = "^23.2.1"
python-multipart = "^0.0.9"
jinja2 = "^3.1.3"
markdown = "^3.6"
loguru = "^0.7.2"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
mypy = "^1.9"
wemake-python-styleguide = "^0.19"
safety = ">=2.3,<4.0"
pytest = ">=7.4,<9.0"
pytest-cov = ">=4,<6"
black = ">=22.12,<25.0"
isort = "^5.13"
types-markdown = "^3.5.0.20240129"
flake8-pytest-style = ">=2.0,<3.0"
doc8 = "^1.1.1"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
